<resources>
    <string name="app_name">Detail Surprise</string>
    <string name="base_url">http://gl-endpoint.herokuapp.com/</string>

    <string name="value_auth">Ingresa el numero que aparece en la caja</string>
    <string name="invalid_code">Código no válido</string>
    <string name="see_surprise">Ver Sorpresa</string>
    <string name="next">Siguiente</string>
    <string name="download">Descargar</string>
    <string name="replay">Reproducir de nuevo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pink">Rosado</string>
    <string name="blue">Azul</string>
    <string name="orange">Naranja</string>
    <string name="multicolor">Multicolor</string>
    <string name="none">Ninguno</string>
    <string name="write_message">Escribe el Mensaje</string>
    <string name="message_example_detail">Hola aleja, Fabian tiene una sorpresa para ti!! esperamos que la disfrutes</string>
    <string name="code_generate_button">Generar codigo</string>
    <string name="select_background">Elige fondo mensaje</string>
    <string name="upload_video_image">Subir video o imagen</string>
    <string name="finish">Finalizar</string>
    <string name="write_message_company">Esperamos que te haya gustado esta linda sorpresa, Puedes encontrar mas información acerca de nosotros en:</string>
    <string name="link_social_media">Vincula tus redes sociales</string>
</resources>
