<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAdmin">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="@string/write_message"
                    app:layout_constraintBottom_toTopOf="@+id/message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.01999998"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/message"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:gravity="start"
                    android:hint="@string/message_example_detail"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/button"
                    style="@style/AppTheme.ButtonAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:text="@string/upload_video_image"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/message" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_20sdp"
                    app:layout_constraintBottom_toTopOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <RadioButton
                        android:id="@+id/radioButton"
                        style="@style/AppTheme.TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pink" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        style="@style/AppTheme.TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blue"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        style="@style/AppTheme.TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orange" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        style="@style/AppTheme.TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multicolor" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        style="@style/AppTheme.TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/none" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="@string/select_background"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <Button
                    android:id="@+id/button2"
                    style="@style/AppTheme.ButtonAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:text="@string/code_generate_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/AppTheme.TextAppearanceBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:textSize="@dimen/text_big"
                    app:layout_constraintBottom_toBottomOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button2"
                    app:layout_constraintTop_toTopOf="@+id/button2"
                    tools:text="8888" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:src="@android:drawable/checkbox_on_background"
                    app:layout_constraintBottom_toBottomOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button" />

                <Button
                    android:id="@+id/button3"
                    style="@style/AppTheme.ButtonAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:text="@string/finish"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
