<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAuth"
    tools:context=".ui.auth.AuthFragment">

    <TextView
        android:id="@+id/first"
        style="@style/AppTheme.CodeAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.19"
        tools:text="4" />

    <TextView
        android:id="@+id/second"
        style="@style/AppTheme.CodeAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.19"
        tools:text="4" />

    <TextView
        android:id="@+id/third"
        style="@style/AppTheme.CodeAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/second"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.19"
        tools:text="4" />

    <TextView
        android:id="@+id/four"
        style="@style/AppTheme.CodeAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/third"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.19"
        tools:text="4" />

    <TextView
        android:id="@+id/textView5"
        style="@style/AppTheme.TextAppearanceBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/value_auth"
        android:textColor="@color/colorTextAuth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/seeSurpriseButton"
        style="@style/AppTheme.ButtonAppearance"
        android:enabled="false"
        android:text="@string/see_surprise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/invalidCode"
        style="@style/AppTheme.TextAppearanceBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_code"
        android:textColor="@color/colorTextAuth"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/seeSurpriseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:maxLength="4"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="8888" />

    <TextView
        android:id="@+id/invisibleAdmin"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
