<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAdmin">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="@string/write_message"
                    app:layout_constraintBottom_toTopOf="@+id/message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/message"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:gravity="start"
                    android:hint="@string/write_message_company"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="@string/link_social_media"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/message" />

                <Button
                    android:id="@+id/button2"
                    style="@style/AppTheme.ButtonAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/finish"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:hint="wa.link/xxxxxx"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:hint="https://www.instagram.com/xxxxxxxxx"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:hint="https://www.facebook.com/xxxxxxxxx"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_4sdp"

                    android:hint="https://www.twitter.com/xxxxxxxxx"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    style="@style/AppTheme.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:hint="https://www.webpage.com/xxxxxxxxx"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/button2"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
